--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   photo_view: ^0.2.2
   scoped_model: ^1.0.1
   decimal: ^0.3.0
+  firebase_ml_vision: 0.5.1+1
   
 
 dev_dependencies:
